--- a/index.html
+++ b/index.html
@@ -1,19 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- ~~~~~~~css link~~~~~~ -->
-   <link rel="stylesheet" href="style.css">
-  <title>G3 Architects</title>
-</head>
-<body>
-  <header>  </header>
-  <main>
 
-  </main>
-  <footer>
-    
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- ~~~~~~~css link~~~~~~ -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- ~~~~~google fonts~~~~ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+
+    <title>RS Architects</title>
+  </head>
+
+  <body>
+    <header id="header">
+
+      <!-- ~~~~~~~nav section~~~~~~ -->
+      <nav id="nav-bar">
+        <div class="nav-container">
+          <div class="nav-content">
+            <h3 class="nav-tittle">RS Architects</h3>
+            <div>
+              <ul class="nav-menu">
+                <li><a class="nav-link" href="#">Home</a></li>
+                <li><a class="nav-link" href="#">About</a></li>
+                <li><a class="nav-link" href="#">Contacts us</a></li>
+                <li><a class="nav-link" href="#">Login</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <!-- ~~~~~~~hero-section~~~~~~~~ -->
+      <div class="hero">
+        <div class="hero-container">
+          <div class="hero-content">
+            <h1 class="banner-tittle">Brand New
+              Group of Architects</h1>
+            <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration
+              in some form,
+              by injected humour, or randomised words which don't look even</p>
+            <div></div>
+            <button class="primary-button">Explore More</button>
+          </div>
+
+          <div class="">
+            <img src="images/banner.png" alt="" class="hero-img">
+          </div>
+        </div>
+      </div>
+    </header>
+    <main id="main">
+      <section class="teams">
+        <div class="team-container">
+          <div class="team-img">
+
+          </div>
+          <div class="our-features">
+            <h2>
+              <span class="feature-heading-color1">Quick list</span> of Our
+              <span class="feature-heading-color2">Features</span>
+            </h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in some form,
+              by injected humour, or randomised words which don't look even</p>
+              <button class="primary-button">Explore More</button>
+          </div>
+
+        </div>
+      </section>
+
+    </main>
+    <footer>
+
+    </footer>
+  </body>
+
 </html>
