--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="nav-content">
             <h3 class="nav-tittle">RS Architects</h3>
             <div>
-              <ul class="nav-menu">
+              <ul class="nav-menu display-flex">
                 <li><a class="nav-link" href="#">Home</a></li>
                 <li><a class="nav-link" href="#">About</a></li>
                 <li><a class="nav-link" href="#">Contacts us</a></li>
@@ -57,18 +57,23 @@
         </div>
       </div>
     </header>
+
+    <!-- ~~~~~team and feature~~~~~~~ -->
     <main id="main">
       <section class="teams">
-        <div class="team-container">
-          <div class="team-img">
-
+        <div class="team-container display-flex">
+          <div class="team-img-container">
+            <img src="images/team1.png" alt="two Architects discussing about design">
+            <img src="images/team2.png" alt="three Architects standing">
+            <img src="images/team3.png" alt="two Architects discussion about problem">
+            <img src="images/team4.png" alt="two Architects done there deal">
           </div>
           <div class="our-features">
-            <h2>
+            <h2 class="feature-tittle">
               <span class="feature-heading-color1">Quick list</span> of Our
               <span class="feature-heading-color2">Features</span>
             </h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
               in some form,
               by injected humour, or randomised words which don't look even</p>
               <button class="primary-button">Explore More</button>
