I create FAQ section with responsibe

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           <div class="hero-content">
             <h1 class="banner-tittle">Brand New
               Group of Architects</h1>
-            <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the
+            <p class="banner-discription description-color">There are many variations of passages of Lorem Ipsum
+              available, but the
               majority have suffered alteration
               in some form,
               by injected humour, or randomised words which don't look even</p>
@@ -58,9 +59,9 @@
       </div>
     </header>
 
-   
+
     <main id="main">
-      <!-- ~~~~~team and feature~~~~~~~ -->
+      <!-- ~~~~~team and feature start~~~~~~~ -->
       <section class="teams">
         <div class="team-container display-flex">
           <div class="team-img-container">
@@ -70,18 +71,61 @@
             <img src="images/team4.png" alt="two Architects done there deal">
           </div>
           <div class="our-features">
-            <h2 class="feature-tittle">
+            <h2 class="section-tittle">
               <span class="feature-heading-color1">Quick list</span> of Our
-              <span class="feature-heading-color2">Features</span>
+              <span class="feature-heading-color2"> <br>Features</span>
             </h2>
-            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            <p class="feature-description description-color">There are many variations of passages of Lorem Ipsum
+              available, but the
+              majority have suffered alteration
               in some form,
               by injected humour, or randomised words which don't look even</p>
-              <button class="primary-button">Explore More</button>
+            <button class="primary-button">Explore More</button>
           </div>
-
         </div>
       </section>
+      <!-- features will enjoy -->
+
+      <!-- ~~~facts-section~~~ -->
+      <section id="facts">
+        <div class="fact">
+          <h3 class="section-tittle">Some Facts</h3>
+          <p class="description-color fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration.
+          </p>
+          <div class="facts-container">
+
+            <!-- card 1 -->
+            <div class="facts-card">
+              <img src="images/icons/ribon.png" alt="">
+              <h3 class="fact-number">53</h3>
+              <p class="description-color card-description">Awards Winnings</p>
+            </div>
+
+            <!-- card 2 -->
+            <div class="facts-card">
+              <img src="images/icons/projects.png" alt="">
+              <h3 class="fact-number">1458</h3>
+              <p class="description-color card-description">Project Finished</p>
+            </div>
+
+            <!-- card 3 -->
+            <div class="facts-card">
+              <img src="images/icons/customers.png" alt="">
+              <h3 class="fact-number">590</h3>
+              <p class="description-color card-description">Clients Worked</p>
+            </div>
+
+            <!-- card 4 -->
+            <div class="facts-card">
+              <img src="images/icons/email.png" alt="">
+              <h3 class="fact-number">22578</h3>
+              <p class="description-color card-description">Email Send</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
     </main>
     <footer>
